# Earthquake-Monitor-Backend-Rust

./: .env.example  Cargo.toml  Dockerfile  README.md  assumptions_and_limitations.md  design_decision.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 0001_create_earthquakes.sql
src/: api_docs.rs  db.rs  ingest.rs  lib.rs  main.rs  metrics.rs  models.rs  routes.rs
tests/: integration.rs  usgs_parse.rs
tests/fixtures/: sample_geo.json
