[package]
name = "earthquake-monitor-backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres"] }
dotenvy = "0.15"
thiserror = "2.0.17"
uuid = { version = "1", features = ["v4","serde"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }